# PAL

./: CHANGELOG.md  README.md  pyproject.toml
pal/: cli.py
tests/: test_pal_engine.py
tests/toy_example/: al_setting.py  generator.py  model.py  oracle.py  utils.py
tests/toy_example_ref/: retrain_history_6.json
