[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PAL"
version = "3.0.0"
description = "Parallel active learning infrastructure."
readme = "README.md"
authors = [{ name = "Chen Zhou", email = "chen.zhou@kit.edu" }]

[project.scripts]
pal_engine = "pal.cli:engine"
#TODO add requirements/dependencies.

[tool.setuptools.packages.find]
include = ["pal*"]
namespaces = false
